--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.jpa.generate-ddl=true
+spring.web.resources.static-locations=classpath:/static
 spring.jpa.open-in-view = false
